--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
+    "lodash": "^4.14.2",
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-component-gulp-tasks": "^0.7.6",
-    "lodash": "^4.14.0",
+    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
@@ -28,8 +28,7 @@
   "dependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-notification-system": "^0.2.7",
-    "lodash": "^4.14.0"
+    "react-notification-system": "^0.2.7"
   },
   "browserify-shim": {
     "react": "global:React"
