--- a/package.json
+++ b/package.json
@@ -14,11 +14,19 @@
   },
   "devDependencies": {
     "babel-eslint": "^4.1.3",
+    "babel-jest": "^14.1.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-react": "^6.11.1",
+    "enzyme": "^2.4.1",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
+    "jest": "^14.1.0",
+    "jest-cli": "^14.1.0",
     "lodash": "^4.14.2",
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
+    "react-addons-test-utils": "^15.3.1",
     "react-component-gulp-tasks": "^0.7.6",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7",
@@ -27,6 +35,7 @@
   },
   "dependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
+    "react-component-gulp-tasks": "^0.7.7",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7"
   },
@@ -40,11 +49,14 @@
     "publish:site": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
     "start": "gulp dev",
-    "test": "echo \"no tests yet\" && exit 0",
+    "test": "jest",
     "watch": "gulp watch:lib"
   },
   "keywords": [
     "react",
     "react-component"
-  ]
+  ],
+  "jest": {
+    "automock": false
+  }
 }
