--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "babel-jest": "^14.1.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-1": "^6.13.0",
+    "babel-preset-stage-2": "^6.13.0",
     "enzyme": "^2.4.1",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
