--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/gor181/react-notification-system-redux/issues"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
     "babel-eslint": "^4.1.3",
     "babel-jest": "^14.1.0",
     "babel-polyfill": "^6.13.0",
@@ -21,6 +22,8 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.13.0",
     "babel-preset-stage-2": "^6.13.0",
+    "babelify": "^7.3.0",
+    "brfs": "^1.4.3",
     "enzyme": "^2.4.1",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
@@ -30,7 +33,7 @@
     "lodash": "^4.14.2",
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-addons-test-utils": "^15.3.1",
-    "react-component-gulp-tasks": "^0.7.6",
+    "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
@@ -38,7 +41,6 @@
   },
   "dependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-component-gulp-tasks": "^0.7.7",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7"
   },
