--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux": "^3.5.2"
   },
   "dependencies": {
+    "immutable": "^3.8.1",
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7"
