--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "redux": "^3.5.2"
   },
   "dependencies": {
-    "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7"
+  },
+  "peerDependencies": {
+    "react": "^0.14 || ^15.0.0-rc || ^15.0",
+    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0"
   },
   "browserify-shim": {
     "react": "global:React"
