--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
+    "prop-types": "^15.5.8",
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
