--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-notification-system-redux",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "react-notification-system-redux",
   "main": "lib/notifications.js",
   "author": "Goran Udosic",
@@ -44,6 +44,7 @@
     "sinon": "^1.17.6"
   },
   "dependencies": {
+    "prop-types": "^15.5.8",
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
