--- a/package.json
+++ b/package.json
@@ -30,24 +30,24 @@
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
+    "gulp-git": "^2.4.1",
     "jest-cli": "^14.1.0",
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "gulp-git": "^2.4.1",
     "react-addons-test-utils": "^15.3.1",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "require-dir": "^0.3.2",
     "sinon": "^1.17.6"
   },
   "dependencies": {
     "prop-types": "^15.5.8",
-    "react-notification-system": "^0.2.x",
-    "require-dir": "^0.3.2"
+    "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
     "react": "^0.14 || ^15.0.0-rc || ^15.0",
