--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "babelify": "^7.3.0",
     "brfs": "^1.4.3",
     "chai": "^3.5.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^1.6.0",
     "eslint-plugin-react": "^3.5.1",
     "gulp": "^3.9.0",
@@ -34,22 +35,21 @@
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
-    "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-addons-test-utils": "^15.3.1",
+    "react": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0",
+    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
     "react-notification-system": "^0.2.7",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "sinon": "^1.17.6"
   },
   "dependencies": {
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.6.0",
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
-    "react": "^0.14 || ^15.0.0-rc || ^15.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0"
+    "react": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
+    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0"
   },
   "browserify-shim": {
     "react": "global:React"
