--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babelify": "^7.3.0",
     "brfs": "^1.4.3",
     "chai": "^3.5.0",
+    "cross-env": "^5.2.0",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^1.6.0",
@@ -35,12 +36,13 @@
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
-    "react": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
+    "react": "^16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
+    "react-dom": "^16.7.0",
     "react-notification-system": "^0.2.7",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-mock-store": "^1.5.3",
     "sinon": "^1.17.6"
   },
   "dependencies": {
@@ -48,18 +50,20 @@
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
-    "react": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0",
-    "react-dom": "^0.14 || ^15.0.0-rc || ^15.0 || ^16.0"
+    "react": "^16.4.0-0",
+    "react-dom": "^16.4.0-0",
+    "react-redux": "^6.0.0",
+    "redux": "^3.6.0 || ^4.0.0"
   },
   "browserify-shim": {
     "react": "global:React"
   },
   "scripts": {
-    "build": "gulp clean && NODE_ENV=production gulp build",
+    "build": "gulp clean && cross-env NODE_ENV=production gulp build",
     "examples": "gulp dev:server",
     "lint": "eslint ./; true",
-    "publish:site": "NODE_ENV=production gulp publish:examples",
-    "release": "NODE_ENV=production gulp release",
+    "publish:site": "cross-env NODE_ENV=production gulp publish:examples",
+    "release": "cross-env NODE_ENV=production gulp release",
     "start": "gulp dev",
     "test": "mocha test/__tests__/**/*",
     "test-dev": "mocha test/__tests__/**/* --watch",
