--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   "peerDependencies": {
     "react": "^16.4.0-0",
     "react-dom": "^16.4.0-0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "^3.6.0 || ^4.0.0"
   },
   "browserify-shim": {
