--- a/package.json
+++ b/package.json
@@ -48,13 +48,17 @@
   },
   "dependencies": {
     "prop-types": "^15.6.0",
-    "react-notification-system": "^0.2.x"
+    "react-notification-system": "^0.2.x",
+    "require-dir": "1.0.0"
   },
   "peerDependencies": {
     "react": "^16.4.0-0",
     "react-dom": "^16.4.0-0",
     "react-redux": "^6.0.0",
     "redux": "^3.6.0 || ^4.0.0"
+  },
+  "resolutions": {
+    "require-dir": "1.0.0"
   },
   "browserify-shim": {
     "react": "global:React"
@@ -70,6 +74,7 @@
     "test-dev": "mocha test/__tests__/**/* --watch",
     "watch": "gulp watch:lib"
   },
+
   "keywords": [
     "react-notification-system",
     "redux"
