--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react": "^16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": "^16.7.0",
-    "react-notification-system": "^0.2.7",
+    "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
