--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
-    "react": "^16.7.0",
+    "react": ">?16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": "^16.7.0",
     "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
-    "react-redux": "^6.0.0",
+    "react-redux": ">=6.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "sinon": "^1.17.6"
