--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
-    "react": ">?16.7.0",
+    "react": ">=16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
-    "react-dom": "^16.7.0",
+    "react-dom": ">=16.7.0",
     "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
     "react-redux": ">=6.0.1",
     "redux": "^4.0.1",
