--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": ">=17.0.0",
     "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
-    "react-redux": ">=6.0.0",
+    "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "sinon": "^1.17.6"
@@ -50,8 +50,8 @@
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
-    "react": ">=17.0.0",
-    "react-dom": ">=17.0.0",
+    "react": "^16.4.0-0 || ^17.0.0",
+    "react-dom": "^16.4.0-0 || ^17.0.0",
     "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "^3.6.0 || ^4.0.0"
   },
