--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": ">=17.0.0",
     "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
     "sinon": "^1.17.6"
