--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "jsdom": "^9.8.3",
     "lodash": "^4.14.2",
     "mocha": "^3.2.0",
-    "react": ">=17.0.0",
+    "react": "^16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
-    "react-dom": ">=17.0.0",
-    "react-notification-system": "https://github.com/Osamah-learn/react-notification-system",
+    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
@@ -48,6 +47,12 @@
   "dependencies": {
     "prop-types": "^15.6.0",
     "react-notification-system": "^0.2.x"
+  },
+  "peerDependencies": {
+    "react": ">=16.4.0-0 || 17.0.2",
+    "react-dom": ">=16.4.0-0 || 17.0.2",
+    "react-redux": "^6.0.0 || ^7.0.0",
+    "redux": "^3.6.0 || ^4.0.0"
   },
   "browserify-shim": {
     "react": "global:React"
