--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "react": "^16.7.0",
     "react-component-gulp-tasks": "git+https://github.com/gor181/react-component-gulp-tasks.git",
     "react-dom": "^16.7.0",
-    "react-notification-system": "^0.2.7",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-mock-store": "^1.5.3",
@@ -50,8 +49,8 @@
     "react-notification-system": "^0.2.x"
   },
   "peerDependencies": {
-    "react": "^16.4.0-0",
-    "react-dom": "^16.4.0-0",
+    "react": ">=16.4.0-0 || 17.0.2",
+    "react-dom": ">=16.4.0-0 || 17.0.2",
     "react-redux": "^6.0.0 || ^7.0.0",
     "redux": "^3.6.0 || ^4.0.0"
   },
